tests/vertical-slice/reject/closure_capture_whole_value_braced_tail.hew
fn main() {
    let items: Vec<i64> = Vec::new();
    let _f = || { items };
}
